[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/FiraCode-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Utilities/Overlay/MissionItem.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[node name="MissionItem" type="MarginContainer"]
anchor_right = 1.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 1018.0
margin_bottom = 168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1005.0
margin_bottom = 155.0

[node name="MissionName" type="Label" parent="Panel/VBoxContainer"]
margin_right = 998.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Mission Name"

[node name="MissionDescription" type="Label" parent="Panel/VBoxContainer"]
margin_top = 44.0
margin_right = 998.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "This is a description"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubObjectives" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 71.0
margin_right = 998.0
margin_bottom = 148.0
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/SubObjectives"]
margin_left = 20.0
margin_right = 998.0
margin_bottom = 77.0

[node name="Sub-Objective1" type="Label" parent="Panel/VBoxContainer/SubObjectives/VBoxContainer"]
margin_right = 978.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = ">Sub-Objective 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sub-Objective2" type="Label" parent="Panel/VBoxContainer/SubObjectives/VBoxContainer"]
margin_top = 27.0
margin_right = 978.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = ">Sub-Objective 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sub-Objective3" type="Label" parent="Panel/VBoxContainer/SubObjectives/VBoxContainer"]
margin_top = 54.0
margin_right = 978.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 2 )
text = ">Sub-Objective 3"
__meta__ = {
"_edit_use_anchors_": false
}
